--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Code</title>
+  </head>
+  <body>
+    <script src="app.js" charset="utf-8"></script>
+  </body>
+</html>
